<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.easywaypop.app.rally.viewmodel.CompanyViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="35dp"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/tvLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/rally_game_txt"
                android:textSize="36sp"
                android:textColor="@color/colorPrimaryText"
                android:textStyle="bold|italic"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-condensed"/>

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvLogo"
                android:id="@+id/pbLogin"
                android:indeterminate="true"
                app:visibility="@{viewModel.progressVisibility}"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ilAlias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:textColorHint="@color/colorTextHint"
                android:layout_below="@+id/pbLogin">

                <com.easywaypop.app.rally.widget.ActionEditText
                    android:id="@+id/etAlias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:maxLines="1"
                    android:maxLength="150"
                    android:hint="@string/comapany_txt"
                    android:textColorHint="@color/colorTextHint"
                    android:textColor="@color/colorSecondaryText"
                    android:imeOptions="actionDone"
                    android:theme="@style/EditTextTheme"
                    app:addTextChangedListener="@{viewModel.aliasEditTextWatcher}"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:layout_below="@+id/ilAlias"
                android:text="@string/btn_link"
                android:textSize="16sp"
                android:elevation="2dp"
                android:textColor="@color/White"
                android:onClick="@{viewModel::onClick}"
                android:background="@drawable/selector_btn_login" />
        </RelativeLayout>
    </LinearLayout>
</layout>