<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.easywaypop.app.rally.viewmodel.LoginViewModel"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <com.easywaypop.app.rally.widget.CustomImageView
                    android:id="@+id/ivLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:adjustViewBounds="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:scaleType="fitXY"/>

                <ProgressBar
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ivLogo"
                    android:id="@+id/pbLogin"
                    android:indeterminate="true"
                    app:visibility="@{viewModel.progressVisibility}"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ilUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="@color/colorTextHint"
                    android:layout_below="@+id/pbLogin">

                    <EditText
                        android:id="@+id/etUser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:maxLines="1"
                        android:maxLength="150"
                        android:hint="@string/text_hint_user"
                        android:textColorHint="@color/colorTextHint"
                        android:textColor="@color/colorSecondaryText"
                        android:inputType="textEmailAddress"
                        android:imeOptions="actionNext"
                        android:theme="@style/EditTextTheme"
                        app:addTextChangedListener="@{viewModel.usernameEditTextWatcher}"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ilPwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:textColorHint="@color/colorTextHint"
                    android:layout_below="@id/ilUser"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/etPwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:maxLength="50"
                        android:hint="@string/text_hint_password"
                        android:textColor="@color/colorSecondaryText"
                        android:textColorHint="@color/colorTextHint"
                        android:inputType="textPassword"
                        android:imeOptions="actionDone"
                        android:theme="@style/EditTextTheme"
                        app:addTextChangedListener="@{viewModel.passwordEditTextWatcher}"/>
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:layout_below="@+id/ilPwd"
                    android:text="@string/text_btn_login"
                    android:textSize="16sp"
                    android:elevation="2dp"
                    android:textColor="@color/White"
                    android:onClick="@{viewModel::onClick}"
                    android:background="@drawable/selector_btn_login" />

                <TextView
                    android:id="@+id/tvUnlink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="15dp"
                    android:text="@string/unlink_txt"
                    android:textColor="@color/text_unlink_selector"
                    android:onClick="@{viewModel::onClick}"
                    style="@style/TextAppearance.AppCompat.Small"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</layout>